Bug 244690 - MyMoneyPayeeCombo does not properly autocomplete in KNewLoanWizard after Q3Wizard removal
Summary: MyMoneyPayeeCombo does not properly autocomplete in KNewLoanWizard after Q3Wi...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-15 04:20 UTC by Fernando Vilas
Modified: 2010-07-17 17:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Vilas 2010-07-15 04:20:56 UTC
Version:           unspecified (using Devel) 
OS:                Linux

When selecting the payee, the autocompleter only works for starting text, not just any substring of the payee name. The payee combo of the transaction form works for substrings.

Reproducible: Didn't try




This was reported by Alvaro against the patch on ReviewBoard. Opening a bug here to fix it when the patch is committed.
Comment 1 Cristian Oneț 2010-07-15 09:43:39 UTC
Developer hint: call KMyMoneyGlobalSettings::setSubstringSearch(QWidget* w) with the wizard page containing the payee combo as a parameter.
Comment 2 Fernando Vilas 2010-07-17 17:18:00 UTC
SVN commit 1151038 by fvilas:

BUG: 244690

Enable substring searching for the payees in the New Loan Wizard

And fix a crash from the port



 M  +6 -0      knewloanwizard.cpp  
 M  +0 -6      knewloanwizarddecl.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1151038