BUG: 244690

Enable substring searching for the payees in the New Loan Wizard

And fix a crash from the port


svn path=/trunk/extragear/office/kmymoney/; revision=1151038